--- a/HexGrid/Barbar.HexGrid.nuspec
+++ b/HexGrid/Barbar.HexGrid.nuspec
@@ -6,8 +6,8 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
-    <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
+    <licenseUrl>https://github.com/svejdo1/HexGrid/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/svejdo1/HexGrid</projectUrl>
     <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
