--- a/HexGrid/Barbar.HexGrid.nuspec
+++ b/HexGrid/Barbar.HexGrid.nuspec
@@ -3,16 +3,16 @@
   <metadata>
     <id>$id$</id>
     <version>$version$</version>
-    <title>$title$</title>
-    <authors>$author$</authors>
-    <owners>$author$</owners>
+    <title>Barbar.HexGrid</title>
+    <authors>Ondrej Svejdar</authors>
+    <owners>Ondrej Svejdar</owners>
     <licenseUrl>https://github.com/svejdo1/HexGrid/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/svejdo1/HexGrid</projectUrl>
-    <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
+    <iconUrl>https://github.com/svejdo1/HexGrid/raw/master/icon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
-    <copyright>Copyright 2017</copyright>
-    <tags>Tag1 Tag2</tags>
+    <copyright>Copyright 2017 Ondrej Svejdar</copyright>
+    <tags>hex grid map geometry 2d hexgrid</tags>
   </metadata>
 </package>
