--- a/HexGrid/Barbar.HexGrid.nuspec
+++ b/HexGrid/Barbar.HexGrid.nuspec
@@ -11,8 +11,19 @@
     <iconUrl>https://github.com/svejdo1/HexGrid/raw/master/icon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
+    <summary>
+        <![CDATA[
+      A logical hex-grid implementation based on Amit Patel's examples at http://www.redblobgames.com/grids/hexagons/
+
+      Gives mathematical support for various operations over hex-tiled map. Like:
+      - if I click on this point, which hex tile I have clicked on
+      - drawing a line in hex-tiled space
+      - finding a neighbour in hex-tiled space
+      - I have a hex with this coordinates, where will be its center and vertexes
+      ]]>
+    </summary>
+    <releaseNotes>First release</releaseNotes>
     <copyright>Copyright 2017 Ondrej Svejdar</copyright>
-    <tags>hex grid map geometry 2d hexgrid</tags>
+    <tags>hex grid map geometry 2d hexgrid tile</tags>
   </metadata>
 </package>
